# Inventory-Management-Using-GenAI

./: .gitignore  CLAUDE.md  README.md  analytics.py  app.py  audit.py  config.py  constraints.txt  database.py  excel_processing.py  guardrails.py  main.py  product_inventory.db  prompt.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  skills.py  utils.py
.github/workflows/: ci.yml
inventory_management_genai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_analytics.py  test_audit.py  test_config.py  test_database_schema.py  test_guardrails.py  test_helpers.py  test_pytest_regressions.py  test_requirements.py
